--- a/css/styles.css
+++ b/css/styles.css
@@ -313,9 +313,6 @@ margin-top: 10px;
 
 .job-people {
     padding: 30px;
-   
-    
-   
     
 }
 
@@ -441,13 +438,17 @@ font-family: var(--primary-font);
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
 }
+ 
+.card-interactive {
+    display: block;
+}
+
 .card-interactive:hover,
 .card-interactive:focus {
-    width: 370px;
-        height: 404px;
-background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16); }
+ 
+        background: #FFFFFF;
+        border: 1px solid #EEEEEE;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16); }
 
 
 
